# LPaste--CPP-FinalWork2020

./: .gitignore  .ignore  CMakeLists.txt  LICENSE  README.md  main.cpp
aboutMe/: AboutMeWin.cpp  AboutMeWin.h  AboutMeWin.ui
lowLevelKeyBoardHook/: LowLevelKeyBoardHook.cpp  LowLevelKeyBoardHook.h
magnifierGlass/: MagnifierGlass.cpp  MagnifierGlass.h
painterTool/: PainterTool.cpp  PainterTool.h  PainterTool.ui
pasteLabel/: PasteLabel.cpp  PasteLabel.h
resources/: systemTray.qrc
screen/: screen.cpp  screen.h
src/cpp/: main.cpp
src/cpp/aboutMe/: AboutMeWin.cpp  AboutMeWin.ui
src/cpp/lowLevelKeyBoardHook/: LowLevelKeyBoardHook.cpp  LowLevelKeyBoardHook.h
src/cpp/painterTool/: PainterTool.ui
src/cpp/pasteLabel/: PasteLabel.cpp
src/cpp/screen/: Screen.cpp  Screen.h
src/cpp/systemTray/: SystemTray.cpp  SystemTray.h
src/cpp/widget/: Widget.cpp  Widget.h  Widget.ui
src/resources/: AboutMeWin.qrc  systemTray.qrc
systemTray/: SystemTray.cpp  SystemTray.h
widget/: widget.cpp  widget.h  widget.ui
